# x-cer

./: LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DESIGN.md
scripts/: xbroadcast  xcancel  xgather  xinfo  xmonitor  xnotify  xqueue  xsubmit
xcer/: config.py  data_types.py  linked_dirs.py  multi_rsync.py  paths.py  project_design_notes.md  utils.py
xcer/cli/: __init__.py  basic.py  common.py  jobs.py  notify.py  sync.py
xcer/commands/: __init__.py  monitor_cli.py  rsync_cmds.py
xcer/config_template/: clusters.yaml  personal.yaml  presets.yaml  system.yaml
xcer/core/: __init__.py  clusters.py  jobs.py  notifications.py  rsync.py
xcer/mongo/: __init__.py  client.py  config.py  jobs.py  notifications.py  stats.py
xcer/monitor/: __init__.py  alerts.py  daemon.py  heartbeat.py  monitor_paths.py  refresh.py  session_utils.py  singleton_mixin.py
xcer/remote/: slurm.py  ssh.py
xcer/services/: __init__.py  cancel.py  info.py  notify.py  queue.py  submit.py  sync.py
